--- a/policy.html
+++ b/policy.html
@@ -33,11 +33,11 @@
               <ul class="menu">
                 <li class="menu__item"><a class="menu__link" href="/">Главная</a>
                 </li>
-                <li class="menu__item"><a class="menu__link" href="http://localhost:3000/#why">Почему я?</a>
+                <li class="menu__item"><a class="menu__link" href="#why">Почему я?</a>
                 </li>
-                <li class="menu__item"><a class="menu__link" href="http://localhost:3000/#portfolio">Портфолио</a>
+                <li class="menu__item"><a class="menu__link" href="#portfolio">Портфолио</a>
                 </li>
-                <li class="menu__item"><a class="menu__link" href="http://localhost:3000/#contacts">Контакты</a>
+                <li class="menu__item"><a class="menu__link" href="#contacts">Контакты</a>
                 </li>
               </ul><a class="hamburger-icon" href="#"><span class="line line-1"></span><span class="line line-2"></span><span class="line line-3"></span></a>
             </nav>
