Update POST url

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="contacts-wrapper card"><span class="contacts-wrapper__title">Контакты:</span><a class="card card_hovering link" href="mailto:andrey.reznik@yahoo.com" target="_blank" rel="noreferrer"><img src="/img/mail.svg" alt="email" title=""/><span class="card__title">andrey.reznik@yahoo.com</span></a><a class="card card_hovering link" href="tg://resolve?domain=andrey_reznik" target="_blank" rel="noreferrer"><img src="/img/telegram.svg" alt="telegram" title=""/><span class="card__title">@andrey.reznik</span></a><a class="card card_hovering link" href="https://vk.com/andrey.reznik" target="_blank" rel="noreferrer"><img src="/img/vk.svg" alt="vk" title=""/><span class="card__title">@andrey.reznik</span></a><a class="card card_hovering link" href="https://www.instagram.com/andrey.ryeznik/" target="_blank" rel="noreferrer"><img src="/img/instagram.svg" alt="instagram" title=""/><span class="card__title">@andrey.ryeznik</span></a>
             </div>
             <div class="contact-form card">
-              <form class="form" action="/mail.php" method="post" id="form-contact">
+              <form class="form" action="http://u988348y.beget.tech/mail.php" method="post" id="form-contact">
                 <div class="form-group">
                   <h2 class="form__title">Оставьте заявку и я свяжусь с вами в течение 5 минут
                   </h2><input class="form__input" id="name" type="text" name="name" placeholder="Ваше имя"/><input class="form__input contact-group" id="email" type="email" name="email" placeholder="Ваш e-mail"/><input class="form__input contact-group" id="phone" type="tel" name="phone" placeholder="Телефон"/>
